--- a/steps/package.json
+++ b/steps/package.json
@@ -6,6 +6,7 @@
     "start:shell": "sh run-step.sh",
     "start:bash": "bash run-step.sh",
     "ts-node": "ts-node",
+    "cross-env": "cross-env",
     "prettier": "prettier --config .prettierrc --write \"./**/*.{md,ts,js,json,html,scss}\""
   },
   "author": "",
@@ -14,7 +15,11 @@
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.4.0",
     "prettier": "2.8.8",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
